--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1"
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.1",
+    "react-router-dom": "^7.0.2",
+    "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
+    "styled-reset": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
